// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["driverAdapters"]
}

datasource db {
  provider = "sqlite"
}

model User {
  id           String   @id @default(uuid())
  email        String   @unique
  passwordHash String
  createdAt    DateTime @default(now())
  logs         Log[]
}

model Group {
  id          String   @id @default(uuid())
  name        String
  slug        String   @unique
  defaultView String   @default("grid") // grid | carousel | wall
  createdAt   DateTime @default(now())
  photos      Photo[]
}

model Photo {
  id           String   @id @default(uuid())
  url          String
  thumbnailUrl String
  title        String?
  description  String?
  tags         String   @default("[]") // JSON array stored as string for SQLite
  metadata     String   @default("{}") // JSONB stored as string for SQLite
  groupId      String?
  group        Group?   @relation(fields: [groupId], references: [id], onDelete: SetNull)
  createdAt    DateTime @default(now())
}

model Log {
  id        String   @id @default(uuid())
  userId    String
  user      User     @relation(fields: [userId], references: [id])
  action    String
  details   String?
  createdAt DateTime @default(now())
}
